test/1.2/errors/T_EATTRDATA.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

// We should probably remove this error, see SIMICS-9393

/// ERROR EATTRDATA
attribute a0 {
    /// ERROR EATTRDATA
    parameter allocate_type = "uint32";
    /// ERROR EATTRDATA
    data bool flag;
}

/// ERROR EATTRDATA
attribute a1 {
    /// ERROR EATTRDATA
    parameter allocate_type = "uint32";
    event e {
        /// ERROR EATTRDATA
        data int i;
    }
}

/// ERROR EATTRDATA
attribute a2 {
    /// ERROR EATTRDATA
    parameter allocate_type = "uint32";
}
attribute a2 {
    /// ERROR EATTRDATA
    data int i;
}
